force-app/main/default/objects/Opportunity/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Opp_Stage_Active_Customer_Date_Stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Date</type>
</CustomField>