force-app/main/default/objects/Opportunity/fields/ActiveDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveDate__c</fullName>
    <formula>Hot_Leads_Active_Date_Stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>