force-app/main/default/objects/Opportunity/fields/Agreement_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Term_in_Months__c</fullName>
    <label>Agreement Term in Months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>