force-app/main/default/objects/Opportunity/fields/Agreement_Terms_For_Xactly__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Terms_For_Xactly__c</fullName>
    <formula>CASE( Agreement_Term_in_Months__c ,&quot;03&quot;, 3, &quot;04&quot;, 4, &quot;05&quot; ,5, &quot;06&quot; ,6, &quot;07&quot; , 7, &quot;08&quot;, 8, &quot;09&quot; , 9,&quot;10&quot;, 10,&quot;11&quot; ,11,&quot;12&quot;,12, 0)</formula>
    <label>Agreement Terms For Xactly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>