force-app/main/default/objects/Opportunity/fields/Anticipated_Delivery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Delivery_Start_Date__c</fullName>
    <label>Anticipated Delivery Start Date</label>
    <type>Date</type>
</CustomField>