force-app/main/default/objects/Opportunity/fields/Approved_to_Print__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved to Print</label>
    <type>Checkbox</type>
</CustomField>