force-app/main/default/objects/Opportunity/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <formula>Account.Area_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>