force-app/main/default/objects/Opportunity/fields/Art_File__c.field-meta.xml
<CustomField>
    <fullName>Art_File__c</fullName>
    <label>Art File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>