force-app/main/default/objects/Opportunity/fields/Back_pdf__c.field-meta.xml
<CustomField>
    <fullName>Back_pdf__c</fullName>
    <label>Back PDF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>