force-app/main/default/objects/Opportunity/fields/Bank_Account_Number_Sec__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_Sec__c</fullName>
    <label>Bank Account Number Sec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>