force-app/main/default/objects/Opportunity/fields/Bank_Name_or_Name_On_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_or_Name_On_Credit_Card__c</fullName>
    <label>Bank Name or Name On Credit Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>