force-app/main/default/objects/Opportunity/fields/Billing_cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_cycle__c</fullName>
    <formula>IF(
   CloseDate &lt;  DATE(2015,3,1),
   1, 
   IF(
      CloseDate &lt; DATE(2015,4,4),
      2,
      3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>