force-app/main/default/objects/Opportunity/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <formula>IF( CloseDate &lt; DATE(2015,04,04) ,
    IF( DAY( Opp_Stage_Active_Customer_Date_Stamp__c ) &lt; 15,  
        CASE(  Evaluation_Period__c  , 
             &apos;2 Mo&apos;, DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+63),  
                              MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+63) ,1),
             &apos;3 Mo&apos;, DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+94),  
                              MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+94) ,1),
             DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+32),  
                  MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+32) ,1)),
        CASE(  Evaluation_Period__c  ,
             &apos;2 Mo&apos;, DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+83),  
                              MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+83) ,1),
             &apos;3 Mo&apos;, DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+114),  
                              MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+114) ,1),
             DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+52),  
                  MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+52) ,1))   ), 
    CASE(  Evaluation_Period__c  , 
         &apos;2 Mo&apos;, DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+63),  
                          MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+63) ,Billing_Day__c),
         DATE( YEAR(Opp_Stage_Active_Customer_Date_Stamp__c+32),  
              MONTH(Opp_Stage_Active_Customer_Date_Stamp__c+32) ,Billing_Day__c))   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>