force-app/main/default/objects/Opportunity/fields/Billing_Day__c.field-meta.xml
<CustomField>
    <fullName>Billing_Day__c</fullName>
    <formula>IF(DAY(Opp_Stage_Active_Customer_Date_Stamp__c)&lt;7,
   7, 
   IF(DAY(Opp_Stage_Active_Customer_Date_Stamp__c)&lt;14, 
       14,
       IF(DAY(Opp_Stage_Active_Customer_Date_Stamp__c)&lt;21, 
          21, 
          IF(DAY(Opp_Stage_Active_Customer_Date_Stamp__c)&lt;26, 
             26, 
             1) ) ) )</formula>
    <label>Billing Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>