force-app/main/default/objects/Opportunity/fields/Branch_Object__c.field-meta.xml
<CustomField>
    <fullName>Branch_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Object</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>