force-app/main/default/objects/Opportunity/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <description>This is used with automation rules. Will be pulled into Inventory object for E-mail templating.</description>
    <inlineHelpText>Customer&apos;s CC E-mail for leads</inlineHelpText>
    <label>CC Email</label>
    <type>Email</type>
</CustomField>