force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Board Declined</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Advertise</fullName>
            </value>
            <value>
                <fullName>No money</fullName>
            </value>
            <value>
                <fullName>Not in budget</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other marketing had better ROI</fullName>
            </value>
            <value>
                <fullName>Perceived Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>