force-app/main/default/objects/Opportunity/fields/Closed_Won_Lost_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Lost_Date_Stamp__c</fullName>
    <label>Closed Won/Lost Date Stamp</label>
    <type>Date</type>
</CustomField>