force-app/main/default/objects/Opportunity/fields/Commissionable_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if an Opportunity is Commissionable within Xactly Express Application.</description>
    <inlineHelpText>Checkbox to determine if an Opportunity is Commissionable within Xactly Express Application.</inlineHelpText>
    <label>Commissionable Opportunity</label>
    <type>Checkbox</type>
</CustomField>