force-app/main/default/objects/Opportunity/fields/CPL_Methods__c.field-meta.xml
<CustomField>
    <fullName>CPL_Methods__c</fullName>
    <label>CPL Methods</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>OB Campaign</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>