force-app/main/default/objects/Opportunity/fields/CPL_Operation_Stages__c.field-meta.xml
<CustomField>
    <fullName>CPL_Operation_Stages__c</fullName>
    <label>CPL Operation Stages</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage_Types__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Docusign Received</fullName>
            </value>
            <value>
                <fullName>Billing Setup</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Call Center DID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>