force-app/main/default/objects/Opportunity/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <label>Credit Card Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Master Card</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>