force-app/main/default/objects/Opportunity/fields/Credit_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Expiration_Date__c</fullName>
    <label>Credit Card Expiration Date</label>
    <type>Date</type>
</CustomField>