force-app/main/default/objects/Opportunity/fields/CVV__c.field-meta.xml
<CustomField>
    <fullName>CVV__c</fullName>
    <label>CVV #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>