force-app/main/default/objects/Opportunity/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <formula>IF( OR( ISPICKVAL( CPL_Operation_Stages__c , &quot;Deactivated&quot;) ,
        ISPICKVAL( OB_Operation_Stage__c , &quot;Deactivated&quot;) ,
        ISPICKVAL( Operational_Stage_Hot_Leads__c  , &quot;Deactivated&quot;),
        ISPICKVAL( Operational_Stages__c , &quot;Deactivated Customer&quot;),
        ISPICKVAL( Premier_Partner_Operation_Stage__c , &quot;Deactivated&quot;)) , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>