force-app/main/default/objects/Opportunity/fields/Deactivated_Customer_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Customer_Contract_Status__c</fullName>
    <label>Deactivated Customer Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Operational_Stages__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contract Breach</fullName>
            </value>
            <value>
                <fullName>Contract Complete</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>