force-app/main/default/objects/Opportunity/fields/Deactivated_Customer_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Customer_Reason_Code__c</fullName>
    <label>Deactivated Customer Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deactivated_Customer_Contract_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Correction</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Afford</fullName>
            </value>
            <value>
                <fullName>Closed Business</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Moved Business</fullName>
            </value>
            <value>
                <fullName>Non Payment (Over 90)</fullName>
            </value>
            <value>
                <fullName>Poor Service</fullName>
            </value>
            <value>
                <fullName>Rate Increase</fullName>
            </value>
            <value>
                <fullName>Renegotiated agreement</fullName>
            </value>
            <value>
                <fullName>Service Not Effective</fullName>
            </value>
            <value>
                <fullName>Sold Business</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Using Other Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>