force-app/main/default/objects/Opportunity/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <label>DID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>