force-app/main/default/objects/Opportunity/fields/DID_Count__c.field-meta.xml
<CustomField>
    <fullName>DID_Count__c</fullName>
    <label>DID Count</label>
    <summaryForeignKey>DID__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>