force-app/main/default/objects/Opportunity/fields/Docusign_Rcvd_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Rcvd_Date_Stamp__c</fullName>
    <label>Docusign Rcvd Date Stamp</label>
    <type>Date</type>
</CustomField>