force-app/main/default/objects/Opportunity/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <formula>Account.EIN__c</formula>
    <label>EIN</label>
    <type>Text</type>
</CustomField>