force-app/main/default/objects/Opportunity/fields/Evaluation_Period__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Period__c</fullName>
    <label>Evaluation Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Mo</fullName>
            </value>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Mo</fullName>
            </value>
            <value>
                <fullName>3 Mo</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>