force-app/main/default/objects/Opportunity/fields/fActive_Industry_Card__c.field-meta.xml
<CustomField>
    <fullName>fActive_Industry_Card__c</fullName>
    <formula>IF(
 AND(
  IsWon ,
  ISPICKVAL(Stage_Types__c, &quot;Gift Card&quot;),  
  NOT( ISPICKVAL(Operational_Stages__c, &quot;&quot;))  ,
  NOT( ISPICKVAL(Operational_Stages__c, &quot;Deactivated Customer&quot;))),
  TEXT(NuCard_Industry__c) , 
 &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fActive Industry Card</label>
    <type>Text</type>
</CustomField>