force-app/main/default/objects/Opportunity/fields/fCall_Center__c.field-meta.xml
<CustomField>
    <fullName>fCall_Center__c</fullName>
    <description>This field is used for the OB Campaign Activation process.  DO NOT DELETE.</description>
    <formula>OB_Campaign_Call_Center__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCall Center</label>
    <type>Text</type>
</CustomField>