force-app/main/default/objects/Opportunity/fields/fIndustry_Count__c.field-meta.xml
<CustomField>
    <fullName>fIndustry_Count__c</fullName>
    <formula>AND(
  IsWon ,
  ISPICKVAL(Stage_Types__c, &quot;Gift Card&quot;),  
  NOT( ISPICKVAL(Operational_Stages__c, &quot;&quot;))  ,
  NOT( ISPICKVAL(Operational_Stages__c, &quot;Deactivated Customer&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fIndustry Count</label>
    <type>Checkbox</type>
</CustomField>