force-app/main/default/objects/Opportunity/fields/First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Date__c</fullName>
    <formula>IF(
(ISPICKVAL( Evaluation_Period__c, &quot;&quot; ))
 || 
(ISPICKVAL( Evaluation_Period__c, &quot;None&quot; )),
DATE( Year(ActiveDate__c)+floor((MONTH(ActiveDate__c) + 12-12) / 12) ,
mod(MONTH(ActiveDate__c) + 12, 12),
day(ActiveDate__c)),

IF(
(ISPICKVAL( Evaluation_Period__c, &quot;1 Mo&quot;)),

DATE( Year(ActiveDate__c)+floor((MONTH(ActiveDate__c) + 12-11) / 12) ,
mod(MONTH(ActiveDate__c) + 12, 11),
day(ActiveDate__c)),

IF(
(ISPICKVAL( Evaluation_Period__c, &quot;2 Mo&quot;)),

DATE( Year(ActiveDate__c)+floor((MONTH(ActiveDate__c) + 12-10) / 12) ,
mod(MONTH(ActiveDate__c) + 12, 10),
day(ActiveDate__c)),

IF(
(ISPICKVAL( Evaluation_Period__c, &quot;3 Mo&quot;)),

DATE( Year(ActiveDate__c)+floor((MONTH(ActiveDate__c) + 12-9) / 12) ,
mod(MONTH(ActiveDate__c) + 3, 12),
day(ActiveDate__c)), Null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>