force-app/main/default/objects/Opportunity/fields/fMSA__c.field-meta.xml
<CustomField>
    <fullName>fMSA__c</fullName>
    <formula>Branch_Object__r.MSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fMSA</label>
    <type>Text</type>
</CustomField>