force-app/main/default/objects/Opportunity/fields/fOB_Campaign_Industry__c.field-meta.xml
<CustomField>
    <fullName>fOB_Campaign_Industry__c</fullName>
    <formula>Text(NuCard_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Industry</label>
    <type>Text</type>
</CustomField>