force-app/main/default/objects/Opportunity/fields/fOperations_Stage__c.field-meta.xml
<CustomField>
    <fullName>fOperations_Stage__c</fullName>
    <formula>TEXT( Operational_Stages__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOperations Stage</label>
    <type>Text</type>
</CustomField>