force-app/main/default/objects/Opportunity/fields/fOperations_Status__c.field-meta.xml
<CustomField>
    <fullName>fOperations_Status__c</fullName>
    <formula>IF(ISBLANK(TEXT(CPL_Operation_Stages__c)),
   IF(ISBLANK(TEXT(OB_Operation_Stage__c)),
      IF(ISBLANK(TEXT(Operational_Stage_Hot_Leads__c)),
         IF(ISBLANK(TEXT(Operational_Stages__c)),
            IF(ISBLANK(TEXT(Premier_Partner_Operation_Stage__c)),Null
               , TEXT(Premier_Partner_Operation_Stage__c))
            , TEXT(Operational_Stages__c))
         , TEXT(Operational_Stage_Hot_Leads__c))
      , IF( ISPICKVAL(OB_Operation_Stage__c, &quot;Campaign Test&quot;) , &quot;Active&quot;, TEXT(OB_Operation_Stage__c)) )
   , TEXT(CPL_Operation_Stages__c))</formula>
    <label>fOperations Status</label>
    <type>Text</type>
</CustomField>