force-app/main/default/objects/Opportunity/fields/Forward_to_number__c.field-meta.xml
<CustomField>
    <fullName>Forward_to_number__c</fullName>
    <label>Forward To Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>