force-app/main/default/objects/Opportunity/fields/Free_Hot_Leads_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Hot_Leads_End_Date__c</fullName>
    <formula>IF(  ISBLANK( Pre_Close_Free_Hot_Leads_Stage_Date__c), Pre_Close_Free_Hot_Leads_Stage_Date__c, Pre_Close_Free_Hot_Leads_Stage_Date__c + 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Hot Leads End Date</label>
    <type>Date</type>
</CustomField>